# AbstractInterpretationWinterSchool

./: abstract_interpretation.cabal
day01/: day01.cabal
day01/src/: Day_01.hs
day02/: 3cm.sh  day02.cabal
day02/src/CounterMatch/: Eval.hs  Main.hs  Model.hs  Parse.hs
day03/: 3cm.sh  day03.cabal
day03/src/CounterMatch/: Eval.hs  Main.hs  Model.hs  Parity.hs
day03/testData/: test5.3cm
test/Day_01/Test/: Main.hs
